name:           postgresql-wire-protocol
version:        0.1.0.0
synopsis:       Fast pure Haskell implementation of the PostgreSQL wire protocol
homepage:       https://github.com/zadarnowski/postgresql-wire-protocol
category:       Database
stability:      alpha

author:         Patryk Zadarnowski
maintainer:     Patryk Zadarnowski <pat@jantar.org>

copyright:      Copyright (c) 2015 Patryk Zadarnowski

description:

    This is a pure Haskell implementation of the PostgreSQL wire protocol
    for low-level interaction between PostgreSQL client and server.

    It implements both the server and client endpoints of the protocol
    (although the server endpoint is largely untested at this point in time),
    abstracted at a number of levels, from raw message exchange to
    transaction-oriented monadic interactions. It explicitly does NOT
    hide any details of PostgreSQL's data type encoding, which are left
    up to higher libraries implemented on top of @postgresql-wire-protocol@.

    By interacting with the PostgreSQL server at this level, we hope to
    avoid a number of limitations of PostgreSQL's official `libpq` library,
    enabling use of Haskell's sophisticated concurrency platform for
    pipelining of PostgreSQL messages, natural access from Haskell
    to PostgreSQL asynchronous notifications, support for query
    cancellation that actually works under the GHC virtual machine,
    reduction to the amount of memory allocation and more efficient
    use of mixed text and binary data exchange formats.

cabal-version:  >= 1.18
build-type:     Simple
license:        BSD3
license-file:   LICENSE

source-repository head
  type:         git
  location:     https://github.com/zadarnowski/postgresql-wire-protocol.git

source-repository this
  type:         git
  location:     https://github.com/zadarnowski/postgresql-wire-protocol.git
  tag:          0.1.0.0

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures

  exposed-modules:
    Database.PostgreSQL.Protocol.Builders
    Database.PostgreSQL.Protocol.ObjectIDs
    Database.PostgreSQL.Protocol.Readers
    Database.PostgreSQL.Protocol.Types
    Database.PostgreSQL.Protocol.Version

  other-modules:
    Database.PostgreSQL.Protocol.Internal.Builders
    Database.PostgreSQL.Protocol.Internal.Parsers

  build-depends:
    array       >= 0.5.3.0,
    base        >= 4.9 && < 5,
    bytestring  >= 0.10.8.2,
    cereal      >= 0.5.8.1
